--- a/hw/css/style.css
+++ b/hw/css/style.css
@@ -46,7 +46,105 @@ p {
     margin-left: 165px;
     margin-top: 360px;
 }
+a {
+    text-decoration: none;
+}
+a:visited {
+    color: inherit;
+}
 a:hover {
-    transform: scale(1.2);
-    transition: ease-in-out 0.3s;
+    transform: scale(1.1);
+    transition: ease-in-out 0.4s;
+    color: #ED4C5C;
+}
+.contact {
+    height: 545px;
+}
+.contact-text {
+    position: absolute;
+    height: 160px;
+    width: 445px;
+    margin-top: 120px;
+    margin-left: 175px;
+}
+.input-fields {
+    position: absolute;
+    margin-left: 735px;
+    margin-top: 115px;
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: 60px 60px 60px 50px;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 540px;
+    height: 305px;
+}
+.field {
+    font-family: inherit;
+    font-size: 16px;
+    padding-left: 30px;
+    color: #132743;
+    border: 1px solid #333333;
+    border-radius: 6px;
+}
+.field::placeholder {
+    opacity: 0.5;
+}
+.field:hover {
+    transform: scale(1.1);
+    transition: ease-in-out 0.4s;
+}
+.long {
+    grid-column: span 2;
+}
+.sumbit {
+    border-radius: 6px;
+    border: 1px solid #ED4C5C;
+    background-color: #ED4C5C;
+    color: white;
+    text-transform: uppercase;
+    outline: none;
+    box-shadow: none;
+    width: 160px;
+}
+.sumbit:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: ease-in-out 0.4s;
+}
+footer {
+    height: 435px;
+    background-color: #FAFAFA;
+}
+.info {
+    position: absolute;
+    display: grid;
+    justify-content: space-between;
+    width: 1100px;
+    margin-top: 85px;
+    margin-left: 170px;
+    margin-right: 170px;
+    grid-template-columns: 250px 250px 250px 250px;
+    row-gap: 30px;
+}
+h3 {
+    font-family: inherit;
+    font-size: 18px;
+    font-weight: bold;
+}
+span {
+    font-family: inherit;
+    font-size: 12px;
+}
+.footer-div {
+    margin-top: 5px;
+}
+.links {
+    display: flex;
+    width: 65px;
+    margin-top: 15px;
+    justify-content: space-between;
+}
+.copyright {
+    margin-top: 50px;
 }
